--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -7,3 +7,11 @@
   color: #f44444;
   background-color: #ffffff;
 }
+
+.captcha {
+  display: block;
+  height: 70px;
+  margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
